fix(search): 🐛 chip text should not wrap

--- a/resources/skins.citizen.search/skins.citizen.search.less
+++ b/resources/skins.citizen.search/skins.citizen.search.less
@@ -87,6 +87,7 @@
 
 		&-chip {
 			border-radius: var( --border-radius--medium );
+			white-space: nowrap;
 
 			.citizen-typeahead {
 				&__content {
